[project]
name = "rawshake"
dynamic = ["version"]
description = "A Python library for reading raw data directly from Raspberry Shake geophones without ShakeOS or seimology software"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jinyang Li", email = "jinyang7@illinois.edu" }]
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5"]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-insta>=0.3.0",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/rawshake/__init__.py"

[tool.ruff]
lint.extend-select = ['Q', 'RUF100', 'C90', 'I']
lint.unfixable = ['F401']
lint.flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
lint.mccabe = { max-complexity = 13 }
format = { quote-style = 'single' }

[tool.uv.pip]
generate-hashes = true
