[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "rawshake"
description = "A Python library for reading raw data directly from Raspberry Shake geophones without ShakeOS or seimology software"
readme = "README.md"
license = "MIT"
authors = [ { name = "Jinyang Li", email = "jinyang7@illinois.edu" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "pyserial>=3.5",
  "scipy>=1.15.3",
  "scipy-stubs>=1.15.3",
]

[dependency-groups]
dev = [
  "pyright>=1.1.398",
  "pytest>=8.3.5",
  "pytest-insta>=0.3",
  "ruff>=0.11.2",
]

[tool.hatch]
metadata.allow-direct-references = true
version.path = "src/rawshake/__init__.py"

[tool.uv]
pip.generate-hashes = true

[tool.ruff]
format = { quote-style = "single" }
lint.extend-select = [ "C90", "I", "Q", "RUF100" ]
lint.unfixable = [ "F401" ]
lint.flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
lint.mccabe = { max-complexity = 13 }

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportImplicitStringConcatenation = false
reportMissingTypeArgument = false
reportUnknownLambdaType = false
